# ach-geopolitical-forecasting-agent

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
agents/: __init__.py  assessment_agent.py  base.py  matrix_agent.py  scraper_agent.py
config/: __init__.py  domain_whitelist.txt  hypothesis_config.yaml  settings.py
data/: processed_urls.csv
data/matrix/: acch_matrix.html  acch_matrix_v20260622_222046_763513.csv  matrix_state.json  summary.html
data/matrix/bahrain/: acch_matrix.html  acch_matrix_v20260623_192422_464528.html  acch_matrix_v20260623_215600_869955.html  acch_matrix_v20260624_160809_170064.html  acch_matrix_v20260629_171204_995668.html  acch_matrix_v20260703_164822_548144.html  matrix_state.json
data/matrix/china/: acch_matrix.html  acch_matrix_v20260623_173547_419745.html  acch_matrix_v20260623_185023_234351.html  acch_matrix_v20260623_192420_710256.html  acch_matrix_v20260623_215559_146825.html  acch_matrix_v20260624_160804_386485.html  acch_matrix_v20260629_171041_611604.html  acch_matrix_v20260703_164750_800463.html  matrix_state.json
data/matrix/iran/: acch_matrix.html  acch_matrix_v20260623_192420_954955.html  acch_matrix_v20260623_215559_375422.html  acch_matrix_v20260624_160805_117254.html  acch_matrix_v20260629_171041_864251.html  acch_matrix_v20260703_164751_515315.html  matrix_state.json
data/matrix/iraq/: acch_matrix.html  matrix_state.json
data/matrix/israel/: acch_matrix.html  acch_matrix_v20260623_174600_977529.html  acch_matrix_v20260623_192421_220104.html  acch_matrix_v20260623_215559_639043.html  acch_matrix_v20260624_160806_009487.html  (+3 more)
documentation/: FinalReport.docx
scripts/: reassess_articles.py  run_and_sync.sh  run_daily.ps1
tests/: conftest.py  test_assessment_agent.py  test_file_manager.py  test_git_sync.py  test_llm_interface.py  test_matrix_agent.py  test_matrix_view.py  test_scraper_agent.py  test_web_scraper.py
tools/: __init__.py  audit_logger.py  file_manager.py  git_sync.py  llm_interface.py  matrix_view.py  web_scraper.py
(+45 files in other folders)
