[project]
name = "cmu-project"
version = "0.1.0"
description = "James Kajdasz Final Project for CMU Agentic AI Certificate Program (July 2026)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.12.0",     # Web scraping for Reuters articles
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain-core>=0.3.0",      # Core LangChain utilities
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.0.0",            # State schemas and validation
    "python-dotenv>=1.0.0",       # Environment configuration
    "requests>=2.31.0",           # HTTP requests for web scraping
    "rich>=15.0.0",               # Console formatting and logging
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "subword-nmt>=0.3.8",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "typing>=3.10.0.0",
    "pyyaml>=6.0.0",              # Configuration file parsing
    "pydantic-settings>=2.14.2",
    "truststore>=0.10.4",
]
[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=7.4.0",              # Unit testing framework
    "pytest-cov>=4.1.0",          # Code coverage
    "black>=23.0.0",              # Code formatting
    "ruff>=0.1.0",                # Linting and import sorting
    "python-docx>=1.2.0",
]

# GPU build of PyTorch (CUDA 13.0 wheels) for the dual TITAN RTX setup.
# Driver 591.86 supports CUDA up to 13.1, so cu130 runtime is compatible.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    # Pydantic v2 deprecates class-based Config and datetime.utcnow; not under test.
    "ignore::DeprecationWarning",
]
